//心跳消息(CLIENT)
message DuxLiveTick{
	required int64 time = 1;			//客户端发出的时间，服务器原封不动的返回，用来计算网络延迟
}

//登录消息(CLIENT + 1)
message ReqLogin{
	required string userName = 1;			//用户名
	required string roleName = 2;			//角色名
	required string nikeName = 3;			//屏显名
	optional string ticket = 4; 			//用户长证书用于用户认证
	optional string channel = 5;			//用户渠道
	optional int32 clientType = 6;		//客户端类型(0:web,1:phone)
}


//登录返回消息(SERVER + 1)
message AckLogin{
	enum LogResult{
		LOG_SUCCESS = 0;						//成功
		LOG_FAILED  = 1;						//失败
	}
	
	enum FailReason{
		FAIL_COMMON  = 0;						//成功
		FAIL_REASON1 = 1;						//游戏维护中
		FAIL_REASON2 = 2;						//解析证书失败
	}
	
	required LogResult result = 1;					//登录是否成功
	optional FailReason reason = 2;					//失败原因
	optional string username = 3;						//用户名
	optional string rolename = 4;						//角色名
	optional int64 userMoney = 5;						//用户账户金额
	
	//FreeHit 累计
	optional FreeHit freeInfo = 6;					//FreeHit信息
}

//下注区间信息
message AnteInfo{
	required int64 limitMin = 1;				//下注区间下限值
	required int64 linitMax = 2;				//下注区间上限值
	repeated int64 values = 3;					//该区间内选项值
}

//请求下注区间(CLIENT + 2)
message ReqAnteInterval{
}

//返回下注区间(SERVER + 2)
message AckAnteInterval{
	repeated AnteInfo antelist = 1;			//下注区间信心
}

message FreeHit{
	required int64 valueMax = 1;				//当前触发FreeHit最大值
	required int64 currentValue = 2;		//当前累计值
	required int32 counts = 3;					//触发FreeHit后，获赠免费次数
	required int64 freeAnte = 4;				//投注值
	required int32 freeState = 5;				//状态 0：未开启 1：开启
	
}

//请求下注(CLIENT + 3)
message ReqChipIn{
	required int32 anteType = 1;	//下注类型	0：普通 1：FreeHit
	required int64 ante = 2;			//下注金额
}

//返回游戏结果(SERVER + 3)
message AckChipIn{
	
	repeated int32 cards = 1;						//牌面结果 [数字数组]
	required int64 awardMoney = 2;			//奖励金额，未中奖awardMoney=0
	required int64 userMoney = 3;				//账户当前携带量
	optional int32 cardType = 4;				//牌型：对应[0-9 : 高牌,一对,两对,三条,顺子,同花,葫芦,四条,同花顺,皇家同花顺]
	optional int32 gameType = 5[default = 0]; //默认正常游戏，1：FreeHit 
	optional FreeHit freeInfo = 6;			//FreeHit 信息
}


//客户端要求关闭游戏(CLIENT + 4)
message ReqCloseGame{
}

//服务器返回关闭游戏结果(SERVER + 4)
message AckCloseGame{
	required int32 result = 1;			//结果是否成功
}


//请求彩池值(CLIENT + 5)
message ReqHandselPool{

}
//返回奖池值(SERVER + 5)
message AckHandselPool{
	required int64 pool = 1;					//彩池值
}

//请求帮助面板倍率表(CLIENT + 6)
message ReqGameHelpInfo{
	
}

//返回帮助面板倍率(SERVER + 6)
message AckGameHelpInfo{
	repeated Multiples mlist = 1;
}

message Multiples{
	optional int32 key = 1;				//牌型对应id
	optional int32 value = 2;			//该牌型对应倍率
}

//(SERVER + 7)
message AckUserFreeInfo{
	optional FreeHit free = 1;
}



//服务器发送巨奖消息(SERVER + 100)
message AckHugeAward{
	required string username = 1;			//用户名
	required int64  awardMoney = 2;		//奖励金额
}


//播报消息(SERVER + 101)
message AckNoteMessage{
	required int32 msgType = 1;				//消息类型
	required string txtMsg = 2;				//消息
}

//提示信息：止损、携带量不足、关闭链接等(SERVER + 102)
message AckAlertMessage{
	required int32 msgType = 1;				//消息类型	
}


//======================================================

//止损消息
//message AckLoseTooMuch{	
//}

//服务器要求客户端断开连接
//message AckCloseConnection{	
//}

//结算消息，用户开始收分
//message ReqCharge{	
//}

//服务器返回结算结果
//message AckCharge{	
//	required int64 userMoney = 1;				//用户携带量
//}

//牌信息(不一定用)
//message Card{
//	required int32 cardValue = 1;				//牌	值	
//	required int32 cardType = 2;				//花  色
//}


